--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <style>
         button {
             width: 100px;
-            margin-left: 45%;
+            margin-left: 42%;
             border: 2px solid rgb(65, 65, 65);
+            border-radius: 10px;
             background-color: white;
             color: black;
-            border-radius: 45%;
             padding: 5px;
         }
     </style>
